test_suite5/ALAN/test_suite/alan-2022-examples/failing/003620_mutation.alan
source x begin if 5 then relax elsif source PC_6a begin relax end then relax end end
